@@ -111,6 +111,13 @@ Charset iso-8859-1
 #
 # SSLApachePort 443
 
+#
+# This variable controls whether Krang uses SSL for links to preview.
+# This is independent of EnableSSL, allowing you to run your preview
+# server with SSL enabled even if Krang is not using SSL.
+#
+PreviewSSL 0
+
 ###########################################################################
 #
 # Instance Configuration
